[Scorecards] Added fix for homepage table
Homepage table was causing an invisible vertical overflow in the homepage. Where users could keep scrolling pass the footer. Adding position relative to the table container fixed the issue.

--- a/scoring/static/scoring/scss/scoring-table.scss
+++ b/scoring/static/scoring/scss/scoring-table.scss
@@ -6,6 +6,7 @@ $border-table: 1px solid transparentize($color: $black, $amount: 1);
     width: 100%;
     max-height: 97vh;
     overflow: auto;
+    position: relative;
 
     @media only screen and (max-width: $table-desktop-breakpoint) {
         width: fit-content; // So it doesn;t use extra space on tablet
